# learn-azure

./: .gitignore  .python-version  README.md
Activity/: function.json
Orchestrator/: __init__.py
Trigger/: __init__.py  function.json
az_fun/: activities.py  app.py  utils.py
functions/: .funcignore  README.md  pyproject.toml
functions/Activity/: __init__.py
functions/Trigger/: __init__.py
functions/scripts/: fn2zip.sh
functions/v1/: host.json  run-function.sh
functions/v1/Activity/: __init__.py
functions/v1/Orchestrator/: __init__.py
functions/v1/Trigger/: __init__.py
functions/v2-blueprints/: activities.py  function_app.py  local.settings.json  models.py  orchestrators.py  requirements-dev.txt  requirements.txt  run-function.sh  triggers.py
functions/v2-blueprints/tests/: conftest.py  test_activities.py  test_adf.py
functions/v2-single-file/: README.md  function_app.py  host.json  run-function.sh
tests/adf_server/: app.py
