[tool.poetry]
name = "az_fun"
version = "0.1.0"
description = ""
authors = ["Marco Filippone <m.filip@hotmail.it>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
fastapi = "^0.104.0"
black = "^23.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
